# RustForge

./: .dockerignore  .env.example  .gitignore  ADVANCED_INPUT_HANDLING_GUIDE.md  ANALYSIS_LARAVEL_12_COMPARISON.md  ARCHITECTURE_ANALYSIS.md  ARCHITECT_SUMMARY.md  BENCHMARKS.md  CHANGELOG.md  CI_CD_BADGES.md  CI_CD_FILES_CREATED.txt  CI_CD_TESTING_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIXES_PLAN.md  Cargo.toml  Cargo_bench.toml  DATABASE_MIGRATION_COMPLETE.md  DATABASE_PERSISTENCE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER.md  Dockerfile  FINAL_STATUS_REPORT.md  FINAL_TEST_REPORT.md  FIXES_AND_IMPROVEMENTS.md  FOUNDRY_COMMAND_API_MIGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISOLATABLE_COMMANDS_GUIDE.md  LARAVEL_FEATURE_PARITY_COMPLETE.md  LICENSE-APACHE  MAKE_POLICY_PROVIDER_IMPLEMENTATION.md  OAUTH2_AUTH_IMPLEMENTATION.md  OBSERVABILITY_IMPLEMENTATION.md  PHASE1_CONCRETE_PATCHES.md  PHASE1_CRITICAL_FIXES_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PRODUCTION_BACKENDS_IMPLEMENTATION.md  PROGRAMMATIC_EXECUTION_GUIDE.md  PUBLISHING_GUIDE.md  QUEUED_COMMANDS_GUIDE.md  (+22 more)
crates/foundry-admin/: Cargo.toml  README.md
crates/foundry-admin/src/: admin.rs  config.rs  dashboard.rs  lib.rs  middleware.rs  resource.rs  routes.rs  templates.rs  widgets.rs
crates/foundry-advanced-input/: Cargo.toml
crates/foundry-advanced-input/src/: array.rs  error.rs  input.rs  lib.rs  validator.rs
crates/foundry-api/: Cargo.toml
crates/foundry-api/examples/: verbosity_example.rs
crates/foundry-api/src/: artisan.rs  console.rs  context_extensions.rs  error.rs  event_invoker.rs  events.rs  health_endpoint.rs  http.rs  input.rs  invocation.rs  isolatable.rs  lib.rs  mcp.rs  metrics_endpoint.rs  optimized_input.rs  queued_commands.rs  request.rs  response.rs  stub_publisher.rs  stubs.rs  upload.rs  verbosity.rs
crates/foundry-api/tests/: artisan_integration_tests.rs  http_endpoints.rs  http_kernel.rs  invoke_tests.rs  upload_tests.rs  websocket_tests.rs
crates/foundry-application/: Cargo.toml
crates/foundry-application/app/: mod.rs
crates/foundry-application/src/: error.rs  lazy_config.rs  lib.rs  registry.rs
crates/foundry-application/tests/: test_command_integration.rs  test_registry_error_handling.rs
crates/foundry-assets/: Cargo.toml
crates/foundry-assets/src/: command.rs  hasher.rs  lib.rs  manifest.rs  publisher.rs
crates/foundry-audit/: Cargo.toml
crates/foundry-audit/src/: lib.rs  logger.rs  models.rs  query.rs  traits.rs
crates/foundry-auth-scaffolding/: Cargo.toml  README.md  SECURITY.md
crates/foundry-auth-scaffolding/benches/: auth_benchmarks.rs
crates/foundry-auth-scaffolding/src/: auth.rs  email.rs  email_verification.rs  handlers.rs  lib.rs  middleware.rs  models.rs  password.rs  session.rs  templates.rs  two_factor.rs
crates/foundry-auth-scaffolding/tests/: integration_test.rs
crates/foundry-broadcast/: Cargo.toml
crates/foundry-broadcast/src/: broadcaster.rs  channels.rs  events.rs  lib.rs  presence.rs
crates/foundry-cache/: Cargo.toml
crates/foundry-cache/src/: lib.rs  store.rs  zero_copy.rs
crates/foundry-cli/: Cargo.toml
crates/foundry-cli/src/: main.rs
crates/foundry-cli/tests/: new_command_test.rs
crates/foundry-command-events/: Cargo.toml  README.md
crates/foundry-command-events/src/: context.rs  dispatcher.rs  error.rs  events.rs  lib.rs  listener.rs
crates/foundry-command-executor/: Cargo.toml
crates/foundry-command-executor/src/: error.rs  executor.rs  lib.rs  options.rs  output.rs  registry.rs  result.rs
crates/foundry-command-pipeline/: Cargo.toml
crates/foundry-command-pipeline/src/: error.rs  executor.rs  lib.rs  pipeline.rs  result.rs
crates/foundry-config/: Cargo.toml
crates/foundry-config/src/: cache.rs  lib.rs  manager.rs  repository.rs
crates/foundry-env/: Cargo.toml
crates/foundry-env/src/: commands.rs  lib.rs  validator.rs
crates/foundry-export/: Cargo.toml  README.md
crates/foundry-export/src/: csv.rs  excel.rs  format.rs  lib.rs  pdf.rs  report.rs  style.rs  template.rs
crates/foundry-export/tests/: integration_tests.rs
crates/foundry-forms/: Cargo.toml  README.md  VALIDATION_GUIDE.md  VALIDATION_SUMMARY.md
crates/foundry-forms/examples/: validation_example.rs
crates/foundry-forms/src/: builder.rs  csrf.rs  field.rs  form_request.rs  lib.rs  renderer.rs  theme.rs  validation.rs
crates/foundry-forms/tests/: form_request_tests.rs  integration_tests.rs  validation_tests.rs
crates/foundry-graphql/: Cargo.toml
crates/foundry-graphql/src/: context.rs  error.rs  lib.rs  schema.rs  server.rs
crates/foundry-graphql/tests/: graphql_tests.rs
crates/foundry-health/: Cargo.toml
crates/foundry-health/src/: checks.rs  command.rs  config.rs  lib.rs  report.rs
crates/foundry-http-client/: Cargo.toml  README.md
crates/foundry-http-client/src/: auth.rs  lib.rs  middleware.rs  request.rs  response.rs  retry.rs
crates/foundry-http-client/tests/: integration_tests.rs
crates/foundry-infra/: Cargo.toml
crates/foundry-infra/src/: artifacts.rs  audit.rs  cache.rs  config.rs  db.rs  events.rs  lib.rs  metrics.rs  migrations.rs  package_manager.rs  queue.rs  seeds.rs  storage.rs  validation.rs
crates/foundry-infra/tests/: integration_postgres.rs
crates/foundry-interactive/: Cargo.toml  README.md
crates/foundry-interactive/examples/: basic_prompts.rs
crates/foundry-interactive/src/: error.rs  lib.rs  prompts.rs
crates/foundry-mail/: Cargo.toml
crates/foundry-mail/src/: lib.rs  mailable.rs  mailer.rs
crates/foundry-maintenance/: Cargo.toml
crates/foundry-maintenance/src/: commands.rs  config.rs  lib.rs  middleware.rs  mode.rs
crates/foundry-notifications/: Cargo.toml
crates/foundry-notifications/src/: lib.rs  manager.rs  notifiable.rs  notification.rs
crates/foundry-oauth/: Cargo.toml
crates/foundry-oauth-server/: Cargo.toml  README.md  SECURITY.md
crates/foundry-oauth-server/benches/: oauth_benchmarks.rs
crates/foundry-observability/: Cargo.toml  INTEGRATION.md  README.md
test-project/: .env  Cargo.toml  README.md
test-project/src/: main.rs
(+540 files in other folders)
