[workspace]
members = [
    # Phase 2: New Modular Architecture (rf-*)
    "crates/rf-core",
    "crates/rf-web",
    "crates/rf-config",
    "crates/rf-container",
    "crates/rf-orm",
    "crates/rf-auth",
    "crates/rf-validation",
    "crates/rf-jobs",
    "crates/rf-mail",
    "crates/rf-storage",
    # Examples
    "examples/hello",
    "examples/database-demo",
    "examples/auth-demo",
    "examples/validation-demo",
    "examples/jobs-demo",
    "examples/mail-demo",
    # Legacy crates
    "crates/foundry-cli",
    "crates/foundry-application",
    "crates/foundry-domain",
    "crates/foundry-infra",
    "crates/foundry-plugins",
    "crates/foundry-api",
    "crates/foundry-storage",
    "crates/foundry-graphql",
    "crates/foundry-testing",
    # Tier 1 Features (NEW)
    "crates/foundry-interactive",
    "crates/foundry-console",
    "crates/foundry-mail",
    "crates/foundry-cache",
    "crates/foundry-queue",
    "crates/foundry-scheduling",
    "crates/foundry-notifications",
    "crates/foundry-tenancy",
    # Tier 2 Features
    "crates/foundry-service-container",
    "crates/foundry-resources",
    "crates/foundry-soft-deletes",
    "crates/foundry-audit",
    "crates/foundry-search",
    "crates/foundry-oauth",
    "crates/foundry-oauth-server",
    "crates/foundry-auth-scaffolding",
    "crates/foundry-config",
    "crates/foundry-ratelimit",
    "crates/foundry-i18n",
    "crates/foundry-broadcast",
    # Tier 3 Features
    "crates/foundry-admin",
    "crates/foundry-export",
    "crates/foundry-forms",
    "crates/foundry-http-client",
    # Tier 3 Advanced Features
    "crates/foundry-tinker-enhanced",
    "crates/foundry-maintenance",
    "crates/foundry-health",
    "crates/foundry-env",
    "crates/foundry-assets",
    # Critical Infrastructure
    "crates/foundry-command-executor",
    "crates/foundry-signal-handler",
    # Phase 2: Observability
    "crates/foundry-observability",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Foundry Core Team <dev@foundry.rs>"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde", "clock"] }
sea-orm = { version = "0.12", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "macros", "with-rust_decimal", "with-chrono"] }
axum = { version = "0.8", features = ["macros", "json", "multipart", "ws"] }
toml = "0.8"
rustyline = "14.0"
regex = "1.10"
console = "0.15"
indicatif = "0.17"
tokio-tungstenite = "0.21"
futures = "0.3"
tower = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
tower-sessions = "0.12"
bcrypt = "0.15"
async-graphql = { version = "7.0", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0"

# Performance Optimizations (Phase 3)
rustc-hash = "1.1"
smallvec = { version = "1.13", features = ["serde"] }
rkyv = { version = "0.7", features = ["validation"] }
once_cell = "1.19"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dhat = "0.3"

# Phase 2: Additional dependencies
validator = { version = "0.18", features = ["derive"] }
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"
config = "0.14"
cron = "0.13"
num_cpus = "1.16"
