[workspace]

[package]
name = "rustforge-test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# RustForge Framework Dependencies (local paths)
foundry-cli = { path = "../crates/foundry-cli" }
foundry-application = { path = "../crates/foundry-application" }
foundry-infra = { path = "../crates/foundry-infra" }
foundry-domain = { path = "../crates/foundry-domain" }
foundry-api = { path = "../crates/foundry-api" }
foundry-plugins = { path = "../crates/foundry-plugins" }

# Core dependencies
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"

# Web framework
axum = { version = "0.7", features = ["macros", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
