[package]
name = "foundry-api"
description = "API & MCP adapters for Foundry Core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
bytes = "1.0"
chrono.workspace = true
foundry-application = { path = "../foundry-application" }
foundry-plugins = { path = "../foundry-plugins" }
foundry-domain = { path = "../foundry-domain" }
foundry-storage = { path = "../foundry-storage" }
tokio-tungstenite.workspace = true
futures.workspace = true
tower.workspace = true
uuid.workspace = true
tower-sessions.workspace = true
jsonwebtoken.workspace = true
lazy_static = "1.5"

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = { version = "0.4", features = ["util"] }
tempfile = "3.10"
foundry-infra = { path = "../foundry-infra" }
once_cell = "1"
