[package]
name = "foundry-assets"
description = "Asset publishing and management for Foundry applications"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
foundry-plugins = { path = "../foundry-plugins" }
foundry-domain = { path = "../foundry-domain" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
