[package]
name = "foundry-auth-scaffolding"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
argon2 = "0.5"

# HTTP & Web
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower-sessions = "0.12"

# Template Engine
askama = "0.12"
askama_axum = "0.4"

# Forms & Validation
validator = { version = "0.18", features = ["derive"] }

# Email (optional)
lettre = { version = "0.11", optional = true, default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
urlencoding = "2.1"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono"] }

# Security
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
subtle = "2.5"
totp-rs = { version = "5.5", optional = true }
qrcode = { version = "0.14", optional = true }

[features]
default = ["email", "two-factor"]
email = ["lettre"]
two-factor = ["totp-rs", "qrcode"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "auth_benchmarks"
harness = false
