[package]
name = "foundry-command-executor"
description = "Programmatic command execution for Foundry Core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
foundry-plugins = { path = "../foundry-plugins" }
foundry-domain = { path = "../foundry-domain" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
