[package]
name = "foundry-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
