[package]
name = "foundry-env"
description = "Environment variable validation and management for Foundry"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
foundry-plugins = { path = "../foundry-plugins" }
serde.workspace = true
serde_json.workspace = true
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"
