[package]
name = "foundry-health"
description = "Health check and diagnostics system for Foundry applications"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
foundry-plugins = { path = "../foundry-plugins" }
colored = "2.1"
sysinfo = "0.31"

[dev-dependencies]
tempfile = "3.10"
