[package]
name = "foundry-health"
description = "Health check and diagnostics system for Foundry applications"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
foundry-plugins = { path = "../foundry-plugins" }
foundry-domain = { path = "../foundry-domain" }
colored = "2.1"
sysinfo = "0.31"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
