[package]
name = "foundry-mail"
description = "Email delivery system with SMTP, templates, and queue integration"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
foundry-domain = { path = "../foundry-domain" }
foundry-plugins = { path = "../foundry-plugins" }

# Email libraries
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
mail-parser = "0.9"

# Template engines
tera = "1.19"
handlebars = "5.1"

# Utilities
mime = "0.3"
mime_guess = "2.0"
base64 = "0.22"
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
tempfile = "3.10"
