[package]
name = "foundry-notifications"
description = "Multi-channel notification system (Database, Email, SMS, Slack, Push)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# Optional dependencies
foundry-mail = { path = "../foundry-mail", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }

[features]
default = []
mail = ["foundry-mail"]
