[package]
name = "foundry-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
url = "2.5"
