[package]
name = "foundry-observability"
description = "OpenTelemetry, Prometheus metrics, and distributed tracing for Foundry"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true

# OpenTelemetry dependencies
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["trace", "metrics", "tonic"] }
opentelemetry-semantic-conventions = "0.14"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace", "metrics"] }
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Prometheus dependencies
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"

# HTTP and utilities
http = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
uuid.workspace = true

# Foundry dependencies
foundry-plugins = { path = "../foundry-plugins" }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
